--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 /* styles.css */
 
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+/* Reset CSS */
+body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+@import"//fonts.googleapis.com/css?family=M+PLUS+Rounded+1c";
+
+body {
+    font-family: "M PLUS Rounded 1c" , sans-serif;
+    line-height: 1.6;
+    background-color: #f9f9f9;
 }
 
 main {
+    max-width: 800px;
+    margin: 0 auto;
     padding: 20px;
 }
 
@@ -22,13 +24,23 @@ main {
     margin-bottom: 20px;
 }
 
+#article-title h1 {
+    font-size: 2em;
+    color: #333;
+}
+
 #article-content {
+    font-size: 1.1em;
+    color: #555;
     margin-bottom: 20px;
 }
 
 footer {
     background-color: #333;
     color: #fff;
-    padding: 20px;
     text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
