--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 /* styles.css */
 
-@import"https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c";
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap')
 
 body {
-    font-family: "M PLUS Rounded 1c" , sans-serif;
+    font-family: "M PLUS Rounded 1c", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     line-height: 1.6;
     background-color: #f9f9f9;
 }
