--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
     font-weight: 400;
     font-style: normal;
     line-height: 1.6;
-    background-color: #f9f9f9;
+    background-color: #fff;
+    margin: 0;
 }
 
 main {
@@ -32,11 +33,9 @@ main {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    border-top: 1px solid #bbb;
     text-align: center;
-    padding: 10px 0;
-    position: fixed;
+    padding: 8px 0;
     width: 100%;
     bottom: 0;
 }
