--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+    color: #333;
+    padding: 6px 0;
     position: fixed;
     width: 100%;
     top: 0;
@@ -27,6 +26,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.container h1 {
+    margin: 6px 0px;
 }
 
 nav ul {
@@ -45,7 +47,7 @@ nav ul li:last-child {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #333;
     text-decoration: none;
 }
 
