--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,9 @@ main {
     font-size: 2em;
     color: #333;
 }
-.article-date {
-    font-size: 14px;
+#article-date {
+    text-align: right;
+    font-size: 0.9em;
     color: #888;
     margin-bottom: 0;
 }
