--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     font-family: "M PLUS Rounded 1c", sans-serif;
     font-weight: 400;
+    font-size: 16px;
     font-style: normal;
     line-height: 1.6;
     background-color: #fff;
@@ -91,7 +92,6 @@ main {
 
 #article-content ul {
     margin: 0;
-    list-style: circle;
 }
 
 footer {
