--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,12 @@ main {
     text-decoration: none;
 }
 
+#article-content blockquote {
+    background-color: #eee;
+    margin: 0 16px;
+    padding: 4px 16px;
+}
+
 #article-content ul {
     margin: 0;
 }
