--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,18 @@ main {
     margin: 0;
 }
 
+/* tag list */
+ul#tag-list {
+    list-style: none;
+    padding: 0;
+}
+#tag-list h2 {
+    background: #eee;
+    padding: 4px 8px;
+    font-size: 1.2em;
+}
+
+
 footer {
     border-top: 1px solid #bbb;
     text-align: center;
