--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 
-@import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru|M+PLUS+Rounded+1c&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap");
 
 body {
     font-family: "Kosugi Maru", "M PLUS Rounded 1c", sans-serif;
