--- a/styles.css
+++ b/styles.css
@@ -127,8 +127,7 @@ ul#tag-list {
 .piece {
     margin-bottom: 16px;
     padding: 8px;
-    border-radius: 4px;
-    box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, .5);
+    border: 1px solid #888;
 }
 h2#piece-title {
     margin: 0px;
