--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,11 @@ body {
     font-size: 16px;
     font-style: normal;
     line-height: 1.6;
-    background-color: #fff;
+    background-color: #f5f5f5;
     margin: 0;
 }
 
 header {
-    background-color: #fff;
     color: #333;
     padding: 6px 0;
     position: fixed;
@@ -62,6 +61,13 @@ main {
     max-width: 640px;
     margin: 60px auto 0;
     padding: 18px;
+}
+#article {
+    margin-top: 72px;
+    margin-bottom: 16px;
+    padding: 8px 16px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px 0px #aaa;
 }
 
 #article-title {
@@ -126,8 +132,9 @@ ul#tag-list {
 /* piece */
 .piece {
     margin-bottom: 16px;
-    padding: 8px;
-    border: 1px solid #888;
+    padding: 8px 16px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px 0px #aaa;
 }
 h2#piece-title {
     margin: 0px;
