--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ ul#tag-list {
     padding: 8px 16px;
     background-color: #fff;
     box-shadow: 0px 2px 4px 0px #aaa;
+    border-radius: 4px;
 }
 h2#piece-title {
     margin: 0px;
