--- a/styles.css
+++ b/styles.css
@@ -129,10 +129,10 @@ ul#tag-list {
 
 /* piece */
 .piece {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     padding: 8px 16px;
     background-color: #fff;
-    box-shadow: 0px 2px 4px 0px #aaa;
+    border:1px solid #aaa;
     border-radius: 4px;
 }
 h2#piece-title {
