--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,22 @@ main {
     margin: 60px auto 0;
     padding: 18px;
 }
+div#top-module {
+    display: flex;
+    border: 2px solid #aaa;
+    padding: 16px;
+}
+img.top-icon {
+    width: 160px;
+    float: left;
+}
+ul#top-list {
+    list-style: none;
+    padding: 0 20px;
+}
+ul#top-list li a {
+    text-decoration: none;
+}
 
 ul#article-list a {
     text-decoration: none;
