--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     font-family: "M PLUS Rounded 1c", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 17px;
     font-style: normal;
     line-height: 1.6;
     background-color: #fff;
@@ -74,7 +74,7 @@ div#top-module {
 }
 img.top-icon {
     width: 160px;
-    height: fit-content;
+    height: max-content;
     float: left;
 }
 ul#top-list {
