--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@ div#top-module {
     padding: 8px;
 }
 img.top-icon {
-    width: 160px;
-    height: max-content;
+    width: 140px;
+    height: 140px;
     float: left;
 }
 ul#top-list {
