--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ iframe {
   text-align: center;
   color: #aaa;
   font-size: 90%;
-  margin: 16px auto;
+  margin: 16px 4px;
 }
 
 #article-title {
