--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,8 @@ code {
 }
 
 #article-content ul {
-    margin: 0;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
 }
 
 /* tag list */
