--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ main h2 {
 
 div#top-module {
     display: flex;
-    border: 1px solid #bbb;
+    border: 1px solid #aaa;
     padding: 8px;
     margin-bottom: 24px;
 }
@@ -203,7 +203,7 @@ ul#tag-list {
     margin-bottom: 24px;
     padding: 8px 16px;
     background-color: #fff;
-    border:1px solid #bbb;
+    border:1px solid #aaa;
 }
 h2#piece-title {
     margin: 0px;
@@ -212,7 +212,7 @@ h2#piece-title {
 }
 
 footer {
-    border-top: 1px solid #bbb;
+    border-top: 1px solid #aaa;
     text-align: center;
     padding: 8px 0;
     width: 100%;
