--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ header {
 }
 .container h1 a {
     color: #333;
+    text-decoration: none;
 }
 img.blog-icon {
     height: 18px;
@@ -68,6 +69,7 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #0088cc; /* ホバー時の色 */
+    text-decoration: none;
 }
 
 main {
@@ -145,6 +147,7 @@ ul.nav-icons {
 
 .nav-item a:hover {
     color: #0088cc; /* ホバー時の色 */
+    text-decoration: none;
 }
 
 .nav-item i {
@@ -465,5 +468,5 @@ footer {
     transition: background-color 0.2s;
 }
 #search-button:hover {
-    background-color: #0044cc;
+    background-color: #005580;
 }
