--- a/styles.css
+++ b/styles.css
@@ -333,6 +333,12 @@ iframe {
     border: 1px dashed #ccc;
     margin: 28px auto;
 }
+
+pre {
+    overflow-y: auto;
+    background: #f5f5f5;
+    padding: 8px;
+}
 code {
     color: #c7254e;
     background-color: #f5f5f5;
